--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -1,8 +1,9 @@
 name: 🗒 Templates Stats
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  create:
+    tags:
+      - v*
   workflow_dispatch:
 
 jobs:
