--- a/network/vnc-detect.yaml
+++ b/network/vnc-detect.yaml
@@ -14,3 +14,8 @@ network:
       - type: word
         words:
           - "RFB"
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - "RFB ([0-9.]+)"
