--- a/misconfiguration/hadoop-unauth.yaml
+++ b/misconfiguration/hadoop-unauth.yaml
@@ -10,9 +10,12 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}/ws/v1/cluster/info'
+      - '{{BaseURL}}/ws/v1/cluster/apps/new-application'
+
     matchers:
       - type: word
         words:
           - 'hadoopVersion'
           - 'resourceManagerVersionBuiltOn'
+          - 'javax.ws.rs.WebApplicationException'
         condition: and
