--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -25,9 +25,8 @@ requests:
       - type: regex
         part: body
         regex:
-          - '(K|k)ey([U|u]p|[D|d]own|[P|p]ress)'
-          - '(K|k)eyboard(N|n)avigation'
-          - '[P|p]assword([E|e]mail[N|n]ot[F|f]ound[M|m]essage|[L|l]abel|[E|e]rror[M|m]essage|[M|m]essage)'
+          - '(?i)key(up|down|press|boardnavigation)'
+          - '(?i)password(emailnotfoundmessage|label|errormessage|message)'
         condition: or
         negative: true
 
