--- a/exposures/configs/kubernetes-kustomization-disclosure.yaml
+++ b/exposures/configs/kubernetes-kustomization-disclosure.yaml
@@ -13,8 +13,8 @@ requests:
       - "{{BaseURL}}/kustomization.yml"
     matchers-condition: and
     matchers:
-      - type: word
-        words:
+      - type: regex
+        regex:
           - "(?m)^\\s*apiVersion\\s*:\\s*kustomize\\.config"
           - "(?mi)^\\s*kind\\s*:\\s*Kustomization"
           - "(?m)^\\scommonLabels\\s*:"
