--- a/exposures/files/php-user-ini-disclosure.yaml
+++ b/exposures/files/php-user-ini-disclosure.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDk
   severity: medium
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/php-user-ini-disclosure.json
-  tags: exposure,config
+  tags: exposure,files
 
 requests:
   - method: GET
