--- a/misconfiguration/clockwork-dashboard-exposure.yaml
+++ b/misconfiguration/clockwork-dashboard-exposure.yaml
@@ -21,6 +21,7 @@ requests:
           - "\"url\""
           - "\"time\""
         part: body
+        condition: and
       - type: word
         words:
           - "application/json"
