--- a/vulnerabilities/other/sangfor-edr-auth-bypass.yaml
+++ b/vulnerabilities/other/sangfor-edr-auth-bypass.yaml
@@ -23,3 +23,7 @@ requests:
           - 'Set-Cookie=""'
         part: header
         negative: true
+      - type: word
+        words:
+          - 'Set-Cookie='
+        part: header
