--- a/vulnerabilities/other/dedecms-carbuyaction-fileinclude.yaml
+++ b/vulnerabilities/other/dedecms-carbuyaction-fileinclude.yaml
@@ -13,6 +13,7 @@ requests:
       - '{{BaseURL}}/plus/carbuyaction.php?dopost=return&code=../../'
     headers:
       Cookie: code=cod
+    redirects: true
 
     matchers-condition: and
     matchers:
