--- a/misconfiguration/shell-history.yaml
+++ b/misconfiguration/shell-history.yaml
@@ -39,6 +39,7 @@ requests:
 
       - type: word
         words:
+          - "application/javascript"
           - "html>"
           - "text/html"
         part: all
