--- a/exposures/files/cold-fusion-cfcache-map.yaml
+++ b/exposures/files/cold-fusion-cfcache-map.yaml
@@ -5,7 +5,7 @@ info:
   reference: https://securiteam.com/windowsntfocus/5bp081f0ac/
   author: geeknik
   severity: low
-  tags: disclosure,cold-fusion
+  tags: disclosure,coldfusion,adobe
 
 requests:
   - method: GET
