--- a/exposures/configs/appsec-yml-disclosure.yaml
+++ b/exposures/configs/appsec-yml-disclosure.yaml
@@ -12,22 +12,18 @@ requests:
     path:
       - "{{BaseURL}}/appspec.yml"
       - "{{BaseURL}}/appspec.yaml"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "\"version\""
-          - "\"os\""
-          - "\"files\""
-          - "\"permissions\""
-          - "\"hooks\""
-          - "\"BeforeInstall\""
-          - "\"ApplicationStart\""
+          - "version:"
+          - "os:"
+          - "files:"
+          - "source:"
         part: body
-      - type: word
-        words:
-          - "application/yaml"
-        part: header
+        condition: and
+
       - type: status
         status:
           - 200
