--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2036,3 +2036,7 @@ requests:
         name: "SpamSniper"
         dsl:
           - "status_code==200 && (\"-1000719429\" == mmh3(base64_py(body)))"
+      - type: dsl
+        name: "KevinLAB"
+        dsl:
+          - "status_code==200 && (\"-1650202746\" == mmh3(base64_py(body)))"
