Update and rename wp-plugineasy-media-gallery-pro-listing.yaml to easy-media-gallery-pro-listing.yaml

--- a/vulnerabilities/wordpress/easy-media-gallery-pro-listing.yaml
+++ b/vulnerabilities/wordpress/easy-media-gallery-pro-listing.yaml
@@ -1,11 +1,11 @@
-id: wp-easy-media-gallery-pro-listing
+id: easy-media-gallery-pro-listing
 info:
   name: WordPress Plugin Media Gallery Pro Listing
   author: pussycat0x
   severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6455
-  tags: wordpress,listing
+  tags: wordpress,listing,wp-plugin
 requests:
   - method: GET
     path:
@@ -16,6 +16,7 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/easy-media-gallery-pro/"
+        condition: and
       - type: status
         status:
           - 200
