--- a/exposures/files/sensitive-storage-data-exposure.yaml
+++ b/exposures/files/sensitive-storage-data-exposure.yaml
@@ -20,13 +20,9 @@ requests:
       - type: word
         words:
           - "Index of"
-          - "/storage"
           - "oauth-private.key"
           - "oauth-private.key"
-          - "logs"
-          - "debugbar"
-          - "app"
-          - "settings.json"
+        condition: and
       - type: status
         status:
           - 200
