--- a/technologies/dotclear-detect.yaml
+++ b/technologies/dotclear-detect.yaml
@@ -10,6 +10,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/dc2/admin/auth.php"
+      - "{{BaseURL}}/auth.php"
 
     matchers-condition: and
     matchers:
