--- a/technologies/sceditor-detect.yaml
+++ b/technologies/sceditor-detect.yaml
@@ -17,6 +17,7 @@ requests:
         words:
           - "<title>Ticket BBCode editor - SCEditor</title>"
           - 'title="SCEditor"'
+        condition: and
       - type: status
         status:
           - 200
