--- a/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
@@ -16,6 +16,8 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/sfwd-lms"
+          condition: or
+
       - type: status
         status:
           - 200
