--- a/exposed-panels/adobe-component-login.yaml
+++ b/exposed-panels/adobe-component-login.yaml
@@ -11,7 +11,8 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}/CFIDE/componentutils/login.cfm'
-
+      - '{{BaseURL}}/cfide/componentutils/login.cfm'
+      
     matchers-condition: and
     matchers:
       - type: word
