--- a/exposures/configs/appsec-yml-disclosure.yaml
+++ b/exposures/configs/appsec-yml-disclosure.yaml
@@ -23,7 +23,10 @@ requests:
           - "source:"
         part: body
         condition: and
-
+        - type: word
+          part: header
+          words:
+            - application/yaml
       - type: status
         status:
           - 200
