--- a/exposures/files/php-user-ini-disclosure.yaml
+++ b/exposures/files/php-user-ini-disclosure.yaml
@@ -24,6 +24,8 @@ requests:
           - "oci8"
           - "agent"
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
