--- a/exposures/files/putty-private-key-disclosure.yaml
+++ b/exposures/files/putty-private-key-disclosure.yaml
@@ -19,6 +19,8 @@ requests:
           - "PuTTY-User-Key-File"
           - "Encryption:"
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
