--- a/exposures/files/pyproject-disclosure.yaml
+++ b/exposures/files/pyproject-disclosure.yaml
@@ -19,6 +19,8 @@ requests:
           - "[build-system]"
           - "[tool.poetry]"
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
