--- a/exposures/files/snyk-ignore-file-disclosure.yaml
+++ b/exposures/files/snyk-ignore-file-disclosure.yaml
@@ -15,7 +15,7 @@ requests:
     matchers:
       - type: word
         words:
-          - '# Snyk (https://snyk.io) policy file, patches or ignores known vulnerabilities.'
+          - "# Snyk (https://snyk.io) policy file, patches or ignores known vulnerabilities."
         part: body
       - type: status
         status:
