--- a/exposures/files/thumbs-db-disclosure.yaml
+++ b/exposures/files/thumbs-db-disclosure.yaml
@@ -13,10 +13,11 @@ requests:
       - "{{BaseURL}}/Thumbs.db"
     matchers-condition: and
     matchers:
-      - type: regex
-        regex:
-          - '\\xD0\\xCF\\x11\\xE0\\xA1\\xB1\\x1A\\xE1'
+      - type: binary
+        binary:
+          - 'D0CF11E0A1B11AE1'
         part: body
+
       - type: status
         status:
           - 200
