--- a/vulnerabilities/other/visual-tools-dvr-rce.yaml
+++ b/vulnerabilities/other/visual-tools-dvr-rce.yaml
@@ -21,7 +21,7 @@ requests:
     matchers:
       - type: regex
         regex:
-          - "root:.*:0:0"
+          - "root:[x*]:0:0:"
 
       - type: status
         status:
