--- a/exposures/configs/dockerfile-hidden-disclosure.yaml
+++ b/exposures/configs/dockerfile-hidden-disclosure.yaml
@@ -17,9 +17,9 @@ requests:
     matchers:
       - type: regex
         regex:
-          - '^(?:FROM(?:CACHE)?|RUN|ADD|WORKDIR|ENV|EXPOSE|\\#)\\s+[ -~]+'
+          - '^(?:FROM(?:CACHE)?|RUN|ADD|WORKDIR|ENV|EXPOSE|\#)\s+[ -~]+'
         part: body
-
+ 
       - type: status
         status:
           - 200
