--- a/default-logins/apache/apache-superset-default-credentials.yaml
+++ b/default-logins/apache/apache-superset-default-credentials.yaml
@@ -22,6 +22,7 @@ requests:
           - "<title>Redirecting...</title>"
           - "<a href=\"/\">/</a>"
         part: body
+        condition: and
 
       - type: status
         status:
