Update template subscription

--- a/default-logins/glpi/glpi-default-credential.yaml
+++ b/default-logins/glpi/glpi-default-credential.yaml
@@ -4,7 +4,7 @@ info:
   author: andysvints
   severity: high
   tags: glpi,default-login
-  description: GLPI is an incredible ITSM software tool that helps you plan and manage IT changes in an easy way, solve problems efficiently when they emerge and allow you to gain legitimate control over your company’s IT budget, and expenses. 
+  description: GLPI is an ITSM software tool that helps you plan and manage IT changes. Checking is default super admin account(glpi/glpi) is enabled. 
   reference: https://glpi-project.org/
 
 requests:
