--- a/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
@@ -1,4 +1,5 @@
 id: wp-sfwd-lms-listing
+
 info:
   name: WordPress Plugin Sfwd-lms Listing
   author: pussycat0x
@@ -11,13 +12,14 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/sfwd-lms/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of"
           - "wp-content/plugins/sfwd-lms"
-          condition: or
+        condition: and
 
       - type: status
         status:
