--- a/vulnerabilities/wordpress/wp-arforms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-arforms-listing.yaml
@@ -20,6 +20,9 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/arforms/"
+          condition: or
+
       - type: status
+
         status:
           - 200
