--- a/vulnerabilities/wordpress/wp-email-subscribers-listing.yaml
+++ b/vulnerabilities/wordpress/wp-email-subscribers-listing.yaml
@@ -18,6 +18,9 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/email-subscribers"
+          condition: or
+
       - type: status
+
         status:
           - 200
