--- a/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
+++ b/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
@@ -20,9 +20,11 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/idx-broker-platinum/"
-          - " composer.lock"
+          - "composer.lock"
           - "webpack.config.js"
           - "composer.json"
+          condition: or
+
       - type: status
         status:
           - 200
