--- a/vulnerabilities/wordpress/wp-arforms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-arforms-listing.yaml
@@ -20,6 +20,8 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/arforms/"
+        condition: and
+
       - type: status
         status:
           - 200
