--- a/vulnerabilities/wordpress/wp-email-subscribers-listing.yaml
+++ b/vulnerabilities/wordpress/wp-email-subscribers-listing.yaml
@@ -16,6 +16,8 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/email-subscribers"
+        condition: and
+
       - type: status
         status:
           - 200
