--- a/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
+++ b/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
@@ -16,9 +16,8 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/idx-broker-platinum/"
-          - " composer.lock"
-          - "webpack.config.js"
-          - "composer.json"
+        condition: and
+
       - type: status
         status:
           - 200
