--- a/vulnerabilities/wordpress/wp-iwp-client-listing.yaml
+++ b/vulnerabilities/wordpress/wp-iwp-client-listing.yaml
@@ -16,6 +16,8 @@ requests:
         words:
           - "Index of"
           - "wp-content/plugins/iwp-client/"
+        condition: and
+
       - type: status
         status:
           - 200
