--- a/vulnerabilities/wordpress/wp-arforms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-arforms-listing.yaml
@@ -2,7 +2,7 @@ id: wp-arforms-listing
 info:
   name: WordPress Plugin Arforms Listing
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6424
   tags: wordpress,listing
