--- a/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
+++ b/vulnerabilities/wordpress/wp-idx-broker-platinum-listing.yaml
@@ -2,7 +2,7 @@ id: wp-idx-broker-platinum-listing
 info:
   name: WordPress Plugin Idx Broker Platinum Listing
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6416
   tags: wordpress,listing
