--- a/vulnerabilities/wordpress/wp-plugin-1-flashgallery-listing.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-1-flashgallery-listing.yaml
@@ -3,7 +3,7 @@ id: wp-plugin-1-flashgallery-listing
 info:
   name: WordPress 1 flash gallery listing
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6978
   tags: wordpress,listing
