--- a/vulnerabilities/wordpress/wp-plugin-lifterlms.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-lifterlms.yaml
@@ -3,7 +3,7 @@ id: wordpress-plugins-lifterlms
 info:
   name: WordPress Plugin lifterlms Listing
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6420
   tags: wordpress,listing
