--- a/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
+++ b/vulnerabilities/wordpress/wp-sfwd-lms-listing.yaml
@@ -3,7 +3,7 @@ id: wp-sfwd-lms-listing
 info:
   name: WordPress Plugin Sfwd-lms Listing
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6426
   tags: wordpress,listing
