--- a/exposures/configs/github-workflows-disclosure.yaml
+++ b/exposures/configs/github-workflows-disclosure.yaml
@@ -41,6 +41,8 @@ requests:
           - "(?m)^\\s*\"?steps\"?:"
           - "(?m)^\\s*- \"?uses\"?:"
         part: body
+        condition: and
+
       - type: word
         words:
           - "Content-Type: text/html"
