--- a/exposures/configs/hp-ilo-serial-key-disclosure.yaml
+++ b/exposures/configs/hp-ilo-serial-key-disclosure.yaml
@@ -20,6 +20,8 @@ requests:
           - "LNAME"
           - "KEY"
         part: body
+        condition: and
+
       - type: word
         words:
           - "Content-Type: text/html"
