--- a/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
+++ b/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
@@ -20,6 +20,8 @@ requests:
           - "root:"
           - "app.listen"
         part: body
+        condition: or
+
       - type: status
         status:
           - 200
