--- a/exposures/files/ruby-on-rails-secret-token-disclosure.yaml
+++ b/exposures/files/ruby-on-rails-secret-token-disclosure.yaml
@@ -18,6 +18,8 @@ requests:
           - "secret_key_base ="
           - "config.secret_token ="
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
