--- a/exposures/configs/git-credentials-disclosure.yaml
+++ b/exposures/configs/git-credentials-disclosure.yaml
@@ -14,14 +14,19 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: regex
-        regex:
-          - "https?://[\\d\\w\\{\\}\\.%]+(?:|@)[\\d\\w\\{\\}\\.]+:[\\d\\w\\{\\}\\.]+(?:|@)[\\d\\w\\{\\}\\.\\?!~#@]+"
-        part: body
+
       - type: word
         words:
-          - "Content-Type: text/html"
-        part: header
+          - "https://"
+          - "@github.com"
+        condition: and
+
       - type: status
         status:
           - 200
+
+      - type: word
+        part: header
+        words:
+          - "text/html"
+        negative: true
