--- a/exposures/configs/dockerfile-hidden-disclosure.yaml
+++ b/exposures/configs/dockerfile-hidden-disclosure.yaml
@@ -23,3 +23,9 @@ requests:
       - type: status
         status:
           - 200
+
+      - type: word
+        part: header
+        words:
+          - "text/html"
+        negative: true
