--- a/default-logins/apache/apache-superset-default-credentials.yaml
+++ b/default-logins/apache/apache-superset-default-credentials.yaml
@@ -13,17 +13,19 @@ requests:
       - "{{BaseURL}}/login/"
     headers:
       Content-Type: application/x-www-form-urlencoded; charset=UTF-8
+
     body: 'username=admin&password=admin'
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "<title>Redirecting...</title>"
-          - "<a href=\"/\">/</a>"
+          - '<title>Redirecting...</title>'
+          - '<h1>Redirecting...</h1'
+          - '<a href="/">'
         part: body
         condition: and
 
       - type: status
         status:
-          - 200
+          - 302
