--- a/exposed-panels/mantis-detect.yaml
+++ b/exposed-panels/mantis-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: Mantis portal detection
   author: makyotox
   severity: info
-  tags: panel
+  tags: panel,mantis
 
 requests:
   - method: GET
@@ -15,5 +15,4 @@ requests:
       - type: word
         words:
           - "<title>MantisBT</title>"
-        condition: and
         part: body
