--- a/exposures/configs/kubernetes-kustomization-disclosure.yaml
+++ b/exposures/configs/kubernetes-kustomization-disclosure.yaml
@@ -14,19 +14,22 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: regex
-        regex:
-          - "(?m)^\\s*apiVersion\\s*:\\s*kustomize\\.config"
-          - "(?mi)^\\s*kind\\s*:\\s*Kustomization"
-          - "(?m)^\\scommonLabels\\s*:"
-          - "(?m)^\\sresources\\s*:"
-          - "(?m)^\\snamespace\\s*:"
+      - type: word
         part: body
+        condition: or
+        words:
+          - "apiVersion:"
+          - "resources:"
+          - "namespace:"
+          - "commonLabels:"
+          - "Kustomization"
 
       - type: word
+        part: body
+        condition: or
         words:
-          - "Content-Type: application/yaml"
-        part: header
+          - "yaml"
+          - "yml"
 
       - type: status
         status:
