more matchers update

--- a/exposures/files/pyproject-disclosure.yaml
+++ b/exposures/files/pyproject-disclosure.yaml
@@ -3,7 +3,7 @@ id: pyproject-disclosure
 info:
   name: Pyproject Disclosure
   author: dhiyaneshDk
-  severity: low
+  severity: info
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/pyproject-disclosure.json
   tags: exposure,files
 
