--- a/exposures/files/snyk-ignore-file-disclosure.yaml
+++ b/exposures/files/snyk-ignore-file-disclosure.yaml
@@ -3,7 +3,7 @@ id: snyk-ignore-file-disclosure
 info:
   name: Snyk Ignore File Disclosure
   author: dhiyaneshDk
-  severity: low
+  severity: info
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/snyk-ignore-file-disclosure.json
   tags: exposure,files
 
