--- a/misconfiguration/clockwork-dashboard-exposure.yaml
+++ b/misconfiguration/clockwork-dashboard-exposure.yaml
@@ -16,11 +16,11 @@ requests:
     matchers:
       - type: word
         words:
-          - "\"id\""
-          - "\"version\""
-          - "\"method\""
-          - "\"url\""
-          - "\"time\""
+          - '"id":'
+          - '"version":'
+          - '"method":'
+          - '"url":'
+          - '"time":'
         part: body
         condition: and
 
