--- a/default-logins/glpi/glpi-default-credential.yaml
+++ b/default-logins/glpi/glpi-default-credential.yaml
@@ -68,8 +68,7 @@ requests:
     matchers:
       - type: word
         words:
-          - 'GLPI - Standard Interface'
+          - '<title>GLPI - Standard Interface</title>'
       - type: status
         status:
-          - 302
-          - 200 
+          - 200
