--- a/vulnerabilities/other/kevinlab-bems-sqli.yaml
+++ b/vulnerabilities/other/kevinlab-bems-sqli.yaml
@@ -1,11 +1,14 @@
 id: kevinlab-bems-sqli
 
 info:
-  name: KevinLAB BEMS (Building Energy Management System) Unauthenticated SQL Injection
+  name: KevinLAB BEMS 1.0 Unauthenticated SQL Injection/Authentication Bypass
   author: gy741
   severity: high
   description: The application suffers from an unauthenticated SQL Injection vulnerability. Input passed through 'input_id' POST parameter in '/http/index.php' is not properly sanitised before being returned to the user or used in SQL queries.
-  reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5655.php
+  reference: |
+    - https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5655.php
+    - https://www.exploit-db.com/exploits/50146
+    - https://packetstormsecurity.com/files/163572/
   tags: kevinlab,sqli
 
 requests:
