--- a/vulnerabilities/other/kevinlab-bems-backdoor.yaml
+++ b/vulnerabilities/other/kevinlab-bems-backdoor.yaml
@@ -31,6 +31,11 @@ requests:
         part: body
         condition: or
 
+      - type: word
+        words:
+          - '"result":true'
+        part: body
+
       - type: status
         status:
           - 200
