--- a/vulnerabilities/other/kevinlab-bems-sqli.yaml
+++ b/vulnerabilities/other/kevinlab-bems-sqli.yaml
@@ -31,6 +31,7 @@ requests:
         words:
           - "XPATH syntax error"
           - ": '\\ZSL1ZSL'"
+        condition: and
       - type: status
         status:
           - 200
