--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2036,3 +2036,11 @@ requests:
         name: "SpamSniper"
         dsl:
           - "status_code==200 && (\"-1000719429\" == mmh3(base64_py(body)))"
+      - type: dsl
+        name: "Selea ANPR Camera"
+        dsl:
+          - "status_code==200 && (\"-41369781\" == mmh3(base64_py(body)))"
+      - type: dsl
+        name: "Selea CarPlateServer"
+        dsl:
+          - "status_code==200 && (\"-656528622\" == mmh3(base64_py(body)))"
