--- a/technologies/redcap-detector.yaml
+++ b/technologies/redcap-detector.yaml
@@ -2,24 +2,27 @@ id: redcap-detector
 
 info:
   name: REDCap detector
-  author: philippedelteil & retr0
+  author: philippedelteil,retr0
   severity: info
-  tags: redcap
+  tags: redcap,tech
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matcher-condition: and
     matchers:
       - type: word
         words:
-          - 'REDCap '
+          - 'REDCap'
           - 'Vanderbilt University'
         condition: and
+
       - type: status
         status:
           - 200
+
     extractors:
       - type: regex
         part: body
