--- a/technologies/redcap-detector.yaml
+++ b/technologies/redcap-detector.yaml
@@ -11,7 +11,7 @@ requests:
     path:
       - "{{BaseURL}}"
 
-    matcher-condition: and
+    matchers-condition: and
     matchers:
       - type: word
         words:
