--- a/exposures/configs/exposed-gitignore.yaml
+++ b/exposures/configs/exposed-gitignore.yaml
@@ -18,18 +18,6 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: dsl
         dsl:
-          - '!contains(tolower(body), "<html") && !contains(tolower(body), "<!doctype") &&  !contains(tolower(body), "<script")'
-
-      - type: dsl
-        dsl:
-          - 'contains(tolower(all_headers), "binary/octet-stream")'
-
-      - type: dsl
-        dsl:
-          - "len(body) > 50 "
+          - '!contains(tolower(body), "<html") && !contains(tolower(body), "<!doctype") && !contains(tolower(body), "<script") && status_code == 200 && len(body) > 50'
