--- a/exposures/configs/exposed-gitignore.yaml
+++ b/exposures/configs/exposed-gitignore.yaml
@@ -20,4 +20,11 @@ requests:
     matchers:
       - type: dsl
         dsl:
-          - '!contains(tolower(body), "<html") && !contains(tolower(body), "<!doctype") && !contains(tolower(body), "<script") && status_code == 200 && len(body) > 50'
+          - '!contains(tolower(body), "<html")'
+          - '!contains(tolower(body), "<!doctype")'
+          - '!contains(tolower(body), "<script")'
+          - '!contains(tolower(body), "<meta")'
+          - '!contains(tolower(all_headers), "image/")'
+          - 'len(body) > 50'
+          - 'status_code == 200'
+        condition: and
