--- a/exposures/files/cold-fusion-cfcache-map.yaml
+++ b/exposures/files/cold-fusion-cfcache-map.yaml
@@ -5,7 +5,7 @@ info:
   reference: https://securiteam.com/windowsntfocus/5bp081f0ac/
   author: geeknik
   severity: low
-  tags: disclosure,coldfusion,adobe
+  tags: exposure,coldfusion,adobe
 
 requests:
   - method: GET
@@ -19,6 +19,7 @@ requests:
           - "Mapping="
           - "SourceTimeStamp="
         condition: and
+
       - type: status
         status:
           - 200
