--- a/technologies/bedita-detect.yaml
+++ b/technologies/bedita-detect.yaml
@@ -9,9 +9,8 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
 
-    matchers-condition: and
     matchers:
       - type: regex
         part: body
