--- a/misconfiguration/hadoop-unauth.yaml
+++ b/misconfiguration/hadoop-unauth.yaml
@@ -12,10 +12,14 @@ requests:
       - '{{BaseURL}}/ws/v1/cluster/info'
       - '{{BaseURL}}/ws/v1/cluster/apps/new-application'
 
+    matchers-condition: or
     matchers:
       - type: word
         words:
           - 'hadoopVersion'
           - 'resourceManagerVersionBuiltOn'
-          - 'javax.ws.rs.WebApplicationException'
         condition: and
+
+      - type: word
+        words:
+          - 'javax.ws.rs.WebApplicationException'
