--- a/iot/lutron-iot-default-login.yaml
+++ b/iot/lutron-iot-default-login.yaml
@@ -5,6 +5,7 @@ info:
   reference: https://www.lutron.com
   author: geeknik
   severity: high
+  tags: iot,default-login,lutron
 
 requests:
   - method: GET
@@ -19,10 +20,12 @@ requests:
           - ">DeviceIP</A>"
           - ">Get Database Info as XML</A>"
         condition: and
+
       - type: word
         part: header
         words:
           - "text/html"
+
       - type: status
         status:
           - 200
