--- a/iot/targa-camera-lfi.yaml
+++ b/iot/targa-camera-lfi.yaml
@@ -6,7 +6,7 @@ info:
   severity: high
   description: The ANPR camera suffers from an unauthenticated arbitrary file disclosure vulnerability. Input passed through the Download Archive in Storage page using get_file.php script is not properly verified before being used to download files. This can be exploited to disclose the contents of arbitrary and sensitive files via directory traversal attacks and aid the attacker to disclose clear-text credentials resulting in authentication bypass.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5616.php
-  tags: targa,lfi
+  tags: targa,lfi,iot
 
 requests:
   - method: GET
@@ -18,7 +18,7 @@ requests:
 
       - type: regex
         regex:
-          - "root:[x*]:0:0"
+          - "root:.*:0:0"
 
       - type: status
         status:
