--- a/exposures/configs/exposed-gitignore.yaml
+++ b/exposures/configs/exposed-gitignore.yaml
@@ -20,11 +20,20 @@ requests:
     matchers:
       - type: dsl
         dsl:
-          - '!contains(tolower(body), "<html")'
-          - '!contains(tolower(body), "<!doctype")'
-          - '!contains(tolower(body), "<script")'
-          - '!contains(tolower(body), "<meta")'
-          - '!contains(tolower(all_headers), "image/")'
           - 'len(body) > 50'
           - 'status_code == 200'
         condition: and
+
+      - type: word
+        words:
+          - "application/javascript"
+          - "application/json"
+          - "application/xml"
+          - "html"
+          - "<!doctype"
+          - "<script"
+          - "<meta"
+          - "image/"
+        part: all
+        negative: true
+        condtion: or
