--- a/default-logins/ibm/ibm-storage-default-credential.yaml
+++ b/default-logins/ibm/ibm-storage-default-credential.yaml
@@ -1,9 +1,10 @@
-id: IBM-Default-Creds
+id: ibm-storage-default-credential
 
 info:
   name: IBM Storage Management default creds
   author: madrobot
   severity: medium
+  tags: default-login,ibm
 
 requests:
   - raw:
@@ -24,10 +25,12 @@ requests:
           - "/0/Console"
           - "Property of IBM"
         condition: and
+
         part: body
       - type: word
         words:
           - "JSESSIONID"
+
         part: header
       - type: status
         status:
