--- a/exposures/configs/appspec-yml-disclosure.yaml
+++ b/exposures/configs/appspec-yml-disclosure.yaml
@@ -1,7 +1,7 @@
-id: appsec-yml-disclosure
+id: appspec-yml-disclosure
 
 info:
-  name: Appsec Yml Disclosure
+  name: Appspec Yml Disclosure
   author: dhiyaneshDk
   severity: medium
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/appsec-yml-disclosure.json
