--- a/default-logins/tieline/tieline.yaml
+++ b/default-logins/tieline/tieline.yaml
@@ -1,12 +1,12 @@
-id: Tieline-default-credentials
+id: tieline-default-credentials
 
 info:
-  name: Tieline Default Credentials Detection Template
+  name: Tieline Default Credentials
   author: Pratik Khalane
   severity: high
-  description: Finding the  Tieline Admin Panels with default credentials.
+  description: Finding the Tieline Admin Panels with default credentials.
   reference: https://pratikkhalane91.medium.com/use-of-default-credentials-to-unauthorised-remote-access-of-internal-panel-of-tieline-c1ffe3b3757c
-  tags: Tieline,default-login
+  tags: tieline,default-login
 
 #Payloads:
 
