--- a/file/keys/twitter-secret.yaml
+++ b/file/keys/twitter-secret.yaml
@@ -13,4 +13,4 @@ file:
     extractors:
       - type: regex
         regex:
-          - '(?i)twitter(.{0,20})?['\"][0-9a-z]{35,44}'
+          - "(?i)twitter(.{0,20})?['\"][0-9a-z]{35,44}"
