added more dirs

--- a/miscellaneous/ntlm-directories.yaml
+++ b/miscellaneous/ntlm-directories.yaml
@@ -10,53 +10,62 @@ info:
 requests:
   - payloads:
       path:
-        - /
-        - /abs/
-        - /ecp/
-        - /etc/
-        - /ews/
-        - /mcx/
-        - /oab/
-        - /owa/
-        - /rgs/
-        - /rpc/
-        - /conf/
-        - /meet/
-        - /ocsp/
-        - /ucwa/
-        - /adfs/
-        - /dialin/
-        - /public/
-        - /certsrv/
-        - /exchweb/
-        - /meeting/
-        - /certprov/
-        - /exchange/
-        - /scheduler/
-        - /webticket/
-        - /autoupdate/
-        - /certenroll/
-        - /powershell/
-        - /rgsclients/
-        - /rpcwithcert/
-        - /autodiscover/
-        - /hybridconfig/
-        - /reach/sip.svc
-        - /aspnet_client/
-        - /groupexpansion/
-        - /persistentchat/
-        - /requesthandler/
-        - /unifiedmessaging/
-        - /mcx/mcxservice.svc
-        - /phoneconferencing/
-        - /requesthandlerext/
-        - /deviceupdatefiles_ext/
-        - /deviceupdatefiles_int/
-        - /microsoft-server-activesync/
-        - /webticket/webticketservice.svc
-        - /webticket/webticketservice.svcabs/
-        - /adfs/services/trust/2005/windowstransport
-
+         - /
+         - /_windows/default.aspx?returnurl=/
+         - /abs/
+         - /adfs/
+         - /adfs/services/trust/2005/windowstransport
+         - /adfs/services/trust/13/usernamemixed
+         - /adfs/ls/wia
+         - /aspnet_client/
+         - /autodiscover/
+         - /autodiscover/autodiscover.xml
+         - /autodiscover/autodiscoverservice.svc/root
+         - /autoupdate/
+         - /certenroll/
+         - /certprov/
+         - /certsrv/
+         - /conf/
+         - /debug/
+         - /deviceupdatefiles_ext/
+         - /deviceupdatefiles_int/
+         - /dialin/
+         - /ecp/
+         - /etc/
+         - /ews/
+         - /exchange/
+         - /exchweb/
+         - /groupexpansion/
+         - /hybridconfig/
+         - /iwa/authenticated.aspx
+         - /iwa/iwa_test.aspx
+         - /mcx/
+         - /mcx/mcxservice.svc
+         - /meet
+         - /meet/
+         - /meeting/
+         - /microsoft-server-activesync/
+         - /oab/
+         - /ocsp/
+         - /owa/
+         - /persistentchat/
+         - /phoneconferencing/
+         - /powershell/
+         - /public/
+         - /reach/sip.svc
+         - /requesthandler/
+         - /requesthandlerext
+         - /requesthandlerext/
+         - /rgs/
+         - /rgsclients/
+         - /rpc/
+         - /rpcwithcert/
+         - /scheduler/
+         - /ucwa/
+         - /unifiedmessaging/
+         - /webticket/
+         - /webticket/webticketservice.svc
+         - /webticket/webticketservice.svcabs/
     attack: sniper
     threads: 50
 
