--- a/exposed-panels/mongo-express-admin-panel.yaml
+++ b/exposed-panels/mongo-express-admin-panel.yaml
@@ -10,7 +10,7 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/db/admin/system.users'
+      - '{{BaseURL}}'
 
     matchers-condition: and
     matchers:
