--- a/takeovers/netlify-takeover.yaml
+++ b/takeovers/netlify-takeover.yaml
@@ -3,7 +3,7 @@ id: netlify-takeover
 info:
   name: netlify takeover detection
   author: 0xPrial,pdteam
-  severity: high
+  severity: info
   tags: takeover
   reference: https://github.com/EdOverflow/can-i-take-over-xyz
 
