Added authenticated templates into default ignore list

--- a/.nuclei-ignore
+++ b/.nuclei-ignore
@@ -11,6 +11,7 @@ tags:
   - "fuzz"
   - "dos"
   - "misc"
+  - "authenticated"
 
 # files is a list of files to ignore template execution
 # unless asked for by the user.
