--- a/misconfiguration/metadata-oracle.yaml
+++ b/misconfiguration/metadata-oracle.yaml
@@ -11,7 +11,7 @@ info:
 requests:
   - raw:
       - |
-        GET ttp://169.254.169.254/opc/v1/instance HTTP/1.1
+        GET http://169.254.169.254/opc/v1/instance HTTP/1.1
         Host: 169.254.169.254
         Accept: */*
         Proxy-Connection: Keep-Alive
