Added additional matching string

--- a/misconfiguration/sap/sap-netweaver-ICM-web-interface.yml
+++ b/misconfiguration/sap/sap-netweaver-ICM-web-interface.yml
@@ -2,13 +2,13 @@
 id: sap-netweaver-ICM-web-interface
 
 info:
-  name: SAP NetWeaver ICM Monitor Web Interface
+  name: SAP NetWeaver ICM Monitor Web Interface Information Disclosure
   author: colossus700
   description: Detection of SAP NetWeaver /sap/admin/public/index.html page
   severity: medium
   tags: sap
   reference:
-    - https://www.acunetix.com/vulnerabilities/web/sap-icf-sap-public-info-sensitive-information-disclosure/
+    - https://help.sap.com/saphelp_em92/helpdata/en/a5/f72651c294256ee10000000a445394/content.htm?no_cache=true
     - https://help.sap.com/doc/d2ecfdfcaedc4e2ba46a99a6be7d5797/1610%20002/en-US/frameset.htm?488980e533b11b5ae10000000a42189c.html
 
 requests:
@@ -21,3 +21,4 @@ requests:
         part: body
         regex:
           - "monitorpub.icp"
+          - "bodyframepub.html"
