Updated matcher type

--- a/misconfiguration/sap/sap-netweaver-ICM-web-interface.yml
+++ b/misconfiguration/sap/sap-netweaver-ICM-web-interface.yml
@@ -17,8 +17,8 @@ requests:
       - "{{BaseURL}}/sap/admin/public/index.html"
 
     matchers:
-      - type: regex
+      - type: word
         part: body
-        regex:
+        words:
           - "monitorpub.icp"
           - "bodyframepub.html"
